fixing the gap for the form and add in paddings and margins for text area
organized each text area to have the same width

--- a/_project/css/main.css
+++ b/_project/css/main.css
@@ -2,6 +2,8 @@
 
 /*Color Palette : #91D8D5 , #BFAC97, #FFFFFF, #CCCCCC, #3D3D3D */
 
+
+
 body {
 
 	font-family: 'Gafata', sans-serif;
@@ -274,7 +276,7 @@ nav ul li:hover > ul {
 
 .sidebyside .title{
 
-	width:90%;
+	width:100%;
 }
 
 
@@ -328,8 +330,13 @@ nav ul li:hover > ul {
 
 	margin: 2.7rem 0;
 	height:auto;
-	max-width: 90%;
+	max-width: 100%;
 	
+}
+
+.col-1of2 .company_feedback, .col-1of2 #company_info{
+	width:90%;
+	margin:0 auto;
 }
 
 
@@ -351,7 +358,7 @@ nav ul li:hover > ul {
 
 
 .company_feedback input[type=text] {
-	width:90%;
+	width:100%;
 	height:2rem;
 	border-radius: 0.3rem;
 	font-family: 'Gafata', sans-serif;
@@ -366,7 +373,7 @@ nav ul li:hover > ul {
 input[type=submit]{
 
 	background-color: rgba(191,172,151,0.8);
-	width: 90%;
+	width: 100%;
 	height:3rem;
 	border-radius: 0.3rem;
 	margin-top: 0.7rem;
@@ -382,7 +389,7 @@ input[type=submit]:hover{
 
 .company_feedback form textarea {
 	display: block;
-	width: 90%;
+	width: 100%;
 	height: 8rem;
 	clear: right;
 	border-radius: 0.3rem;
@@ -407,7 +414,7 @@ input[type=submit]:hover{
 }
 
 .type {
-	width: 90%;
+	width: 100%;
 }
 
 .total_price .col-1of4, .make_payment .col-1of4{
@@ -673,7 +680,7 @@ input[type='checkbox'] {
 
 .c-col-1of4 {
 	width: 25%;
-	padding: 0.5rem 0;
+	
 }
 
 .c-col-1of4 img {
@@ -708,8 +715,15 @@ input[type='checkbox'] {
 
 .name-col1of2 {
 	float:left;
-	width: 47.5%;
+	width: 50%;
+
 	margin-bottom: 0.5rem;
+
+}
+
+
+.name-col1of2:first-of-type{
+	margin-right: 
 
 }
 
@@ -728,6 +742,23 @@ input[type='checkbox'] {
 	height: 30px;
 	border-radius: 0.2rem;
 }
+
+.card #card_label{
+	padding-top: 0.5rem;
+}
+
+.type {
+	padding-top: 0.3rem;
+}
+.name-col1of2 {
+
+	padding-top: 0.5rem;
+}
+
+/*.card #card_label {
+
+	padding-top: 0.5rem;
+}*/
 
 /* home page*/
 
